<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Question #1 -->
        <LinearLayout
            style="@style/LinearLayoutForQuestion"
            android:background="#ffe0b2">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_one_header" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_one_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/questionOneCheckBoxOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_option_one" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/questionOneCheckBoxTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_option_two" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/questionOneCheckBoxThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_option_three" />
            </LinearLayout>


        </LinearLayout>

        <!-- Question #2 -->
        <LinearLayout style="@style/LinearLayoutForQuestion">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_two_header" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_two_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/questionTwoCheckBoxOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_option_one" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/questionTwoCheckBoxTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_option_two" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/questionTwoCheckBoxThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_option_three" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/questionTwoCheckBoxFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_option_four" />
            </LinearLayout>


        </LinearLayout>

        <!-- Question #3 -->
        <LinearLayout
            style="@style/LinearLayoutForQuestion"
            android:background="#ffe0b2">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_three_header" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_three_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/questionThreeTrue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="32dp"
                        android:text="@string/question_three_option_one" />

                    <RadioButton
                        android:id="@+id/questionThreeFalse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_three_option_two" />
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>

        <!-- Question #4 -->
        <LinearLayout style="@style/LinearLayoutForQuestion">

            <TextView
                style="@style/QuestionHeader"
                android:text="@string/question_four_header" />

            <TextView
                style="@style/QuestionText"
                android:text="@string/question_four_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/questionFourOptionOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_option_one" />

                    <RadioButton
                        android:id="@+id/questionFourOptionTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="checkQuestionFour"
                        android:text="@string/question_four_option_two" />

                    <RadioButton
                        android:id="@+id/questionFourOptionThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_option_three" />

                    <RadioButton
                        android:id="@+id/questionFourOptionFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_option_four" />

                </RadioGroup>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:paddingTop="32dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:onClick="onSubmitAnswersButtonClicked"
                android:text="@string/submit_button_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:onClick="onResetButtonClicked"
                android:text="@string/reset_button_text" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
